--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,10 @@ description = "A CLI tool for finding Azure first party clients with pre-consent
 readme = "README.md"
 license = {file = "LICENSE"}
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Stewart Maxwell", email = "smaxwellstewart@gmail.com"}
 ]
 maintainers = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Stewart Maxwell", email = "smaxwellstewart@gmail.com"}
 ]
 keywords = ["azure", "entra", "security", "scopes", "oauth", "red-team"]
 classifiers = [
@@ -39,10 +39,10 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/kidtronnix/azure-clients"
-Repository = "https://github.com/kidtronnix/azure-clients"
-Issues = "https://github.com/kidtronnix/azure-clients/issues"
-Documentation = "https://github.com/kidtronnix/azure-clients#readme"
+Homepage = "https://github.com/kidtronnix/entra-scopes-finder"
+Repository = "https://github.com/kidtronnix/entra-scopes-finder"
+Issues = "https://github.com/kidtronnix/entra-scopes-finder/issues"
+Documentation = "https://github.com/kidtronnix/entra-scopes-finder#readme"
 
 [project.scripts]
 entra-scopes-finder = "entra_scopes_finder.cli:main"
